--- a/src/index.less
+++ b/src/index.less
@@ -58,3 +58,9 @@
     overflow: hidden auto;
   }
 }
+
+@media screen and (max-width: 1190px) {
+  .ant-table-content {
+    overflow: auto;
+  }
+}
