--- a/src/index.less
+++ b/src/index.less
@@ -72,3 +72,23 @@
     overflow: auto;
   }
 }
+
+@media print {
+  .no-print {
+    display: none;
+  }
+
+  * {
+    color: #000000 !important;
+    border-color: #ccc !important;
+    background-color: #ffffff !important;
+  }
+
+  .ant-layout {
+    margin: 0 !important;
+  }
+
+  @page {
+    size: landscape;
+  }
+}
